--- a/webDriverFramework/pom.xml
+++ b/webDriverFramework/pom.xml
@@ -11,6 +11,16 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng-smoke.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.8</source>
@@ -71,9 +81,5 @@
             <version>3.3.0</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
-
-
 </project>
