--- a/webDriverFramework/src/test/resources/correctSearchOption.properties
+++ b/webDriverFramework/src/test/resources/correctSearchOption.properties
@@ -8,7 +8,7 @@ testdata.hotelData.arrivalDate=20-12-2019
 testdata.hotelData.departueDate=21-12-2019
 testdata.hotelData.occupancy=2 adults
 
-testdata.countrySearchData.countryName=Шанхай
+testdata.countrySearchData.countryName=Minsk
 
 testdata.priceRange.minPrice=0
 testdata.priceRange.maxPrice=10
